--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,59 @@
+*{
+  box-sizing: border-box;
+}
 div#map{
   width: 100%;
   height: 90vh;
+}
+.border-right{
+  border-right: 1px solid #eee;
+}
+div.header{
+  background-color: #f7b617;
+  color: #fff;
+  padding-top: 7px;
+  padding-bottom: 7px;
+}
+.form-control{
+  background-color: transparent;
+  border-color: #fff;
+}
+.form-control::placeholder {
+  color: #fff;
+}
+.input-group.input-group-unstyled input.form-control {
+    -webkit-border-radius: 4px;
+       -moz-border-radius: 4px;
+            border-radius: 4px;
+}
+.input-group-unstyled .input-group-addon {
+    /*border-radius:4px;*/
+    border: 0px;
+    background-color: transparent;
+    color: #fff;
+}
+.tarifa{
+  position: fixed;
+  z-index: 1000;
+  height: 160px;
+  background-color: #000;
+  color: #f7b617;
+  font-size: 3rem;
+  bottom: 0;
+  padding-top: 50px;;
+  text-align: center;
+}
+.none{
+  display: none;
+}
+@media (max-width:540px) {
+  div [class *='col-']{
+    display: center;
+  }
+  .tarifa{
+    height: 70px;
+  }
+  .border-right{
+    border-right: 0;
+  }
 }
